Styling and content updates

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,5 @@
 @tailwind utilities;
 
 body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
+  font-family: 'Raleway', serif, sans-serif;
 }
